updated home page to have short description and meet the team section, fixed some spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,12 @@ $standard-roundness: 8px;
   width: 100%;
 }
 
+@mixin text-body-styles {
+  color: white;
+  text-decoration: none;
+  text-align:center;
+}
+
 // global styles
 
 a {
@@ -57,23 +63,27 @@ button {
   align-items: center;
   background-color: $header-background;
 
-  .header-menu-left .menu-logo {
-    height: 40px;
-    width: auto;
+  .header-menu-left {
+    .menu-logo {
+      height: 40px;
+      width: auto;
+    }  
   }
 
-  .header-menu-right .menu-links {
-    list-style-type: none;
-    display: flex;
-    li {
-      margin-right: 1rem;
-    }
-  
-    a {
-      color: $secondary-color;
-      text-decoration: underline;
-      cursor: pointer;
-      font-weight: bold;
+  .header-menu-right {
+    .menu-links {
+      list-style-type: none;
+      display: flex;
+      li {
+        margin-right: 1rem;
+      }
+    
+      a {
+        color: $secondary-color;
+        text-decoration: underline;
+        cursor: pointer;
+        font-weight: bold;
+      }
     }
   }
 }
@@ -168,10 +178,7 @@ button {
     flex-direction: column;
   }
   .terms-text {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    text-align:center;
+    @include text-body-styles();
   }
 
 }
@@ -181,6 +188,10 @@ button {
     display: flex;
     justify-content: center;
     align-content: center;
+    width: 100%;
+    max-width: 1150px;
+    margin: 0 auto;
+
   }
   
   &-companyLogo {
@@ -365,5 +376,68 @@ button {
   p {
     color: white;
     font-style: italic;
+  }
+}
+
+.home {
+  &-logo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+  }
+
+  &-body {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: $primary-color;
+    border-radius: $standard-roundness;
+    padding: 15px 15px;
+
+    .system-diagram {
+      border-radius: $standard-roundness;
+      width: 100%;
+    }
+
+    .description {
+      @include text-body-styles();
+    }
+
+    h1{
+      @include text-body-styles();
+    }
+  }
+}
+
+.about-me {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  background-color: white;
+  border-radius: $standard-roundness;
+
+  &-photo {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    padding: 10px;
+    border-radius: $standard-roundness;
+  }
+
+  &-body {
+    display: flex;
+    flex-direction: column;
+    color: $secondary-color;
+    text-align: left;
+
+    h3 {
+      margin-bottom: -20px;
+    }
+    
+    h4 {
+      font-style: italic;
+      margin-bottom: -5px;
+    }
   }
 }
